--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
 KEY=1234chmp
+
+GOOGLE_EMAIL_CLIENT_ID=789696114102-rvsghrk1v5vnrmv0225r0ja7ivlakrn1.apps.googleusercontent.com
+GOOGLE_EMAIL_SECRET=NzTNTCUlvFOFBB0ZKJT0H7py
