--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-POSTGRES_USER=root
-POSTGRES_PASSWORD=1234
-POSTGRES_DB=store
-POSTGRES_HOST=localhost
+POSTGRES_USER=apvvtdrc
+POSTGRES_PASSWORD=DxJvXCTZ5OzNa2SRktCRkMHLE6vbwozg
+POSTGRES_DB=apvvtdrc
+POSTGRES_HOST=arjuna.db.elephantsql.com
 POSTGRES_PORT=5432
 
 KEY=1234chmp
